--- a/src/NerdStore.WebApp.MVC/appsettings.json
+++ b/src/NerdStore.WebApp.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-NerdStore.WebApp.MVC-EE53CA88-3DE1-4025-9231-70893D0280A1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NerdStoreWebApp1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
